Allow using the crash key stub implementation by setting a GN arg.

This adds a new use_crash_key_stubs GN argument that effectively disables the
crash key subsystem.

Bug: 811308
Change-Id: Ie0fba2c9af4c1514cc7dabc12ca012736a3d5422
Reviewed-on: https://chromium-review.googlesource.com/914708
Reviewed-by: Mark Mentovai <mark@chromium.org>
Reviewed-by: Misha Efimov <mef@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542841}
Former-commit-id: c6f653ac05411d6005ff6f80a05cf77553f14abb